<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_for_location">Search Accuweather for weather location</string>
    <string name="search_location_title">Searching</string>
    <string name="search_location_msg">Looking for a location match</string>
    <string name="search_geo_location_msg">Looking for longitude and latitude</string>
    <string name="default_temp_unit_value">1</string>
    <string name="default_locations_value">0</string>
    <string name="empty_replacer">--</string>
    <string name="to_enable_location_title">Enable location</string>
    <string name="to_enable_location_msg">"Location service is currently disabled, go setting's menu to enable network or gps service?"</string>
    <string name="to_enable_network_title">Enable network</string>
    <string name="to_enable_network_msg">"Network location service is currently disabled, go setting's menu to enable network location?"</string>
    <string name="to_enable_wifi_title">Enable Wifi</string>
    <string name="to_enable_wifi_msg">"Wifi is currently disconnected, go setting's menu to attach to wifi?"</string>
    <string name="location">Location</string>
    <string name="use_curr_loc">Current location</string>
    <string name="use_curr_loc_summary">Use current location for weather</string>
    <string name="specify_loc">Specify location</string>
    <string name="specify_loc_summary">Will show city that user chose</string>
    <string name="enter_city_or_zip">Enter name or zip code</string>
    <string name="search_city">Search</string>
    <string name="live_weather">Live Weather</string>
    <string name="no_result_found">No result found</string>
    <string name="current_location">Current Location</string>
    <string name="Sunny">Sunny</string>
    <string name="Mostly_Sunny">Mostly_Sunny</string>
    <string name="Partly_Sunny">Partly_Sunny</string>
    <string name="Intermittent_Clouds">Intermittent_Clouds</string>
    <string name="Hazy_Sunshine">Hazy_Sunshine</string>
    <string name="Mostly_Cloudy">Mostly_Cloudy</string>
    <string name="Cloudy_AM_and_PM">Cloudy_AM_and_PM</string>
    <string name="Dreary_AM_and_PM">Dreary_AM_and_PM</string>
    <string name="Fog_AM_and_PM">Fog_AM_and_PM</string>
    <string name="Showers_AM_and_PM">Showers_AM_and_PM</string>
    <string name="Mostly_Cloudy_with_Showers">Mostly_Cloudy_with_Showers</string>
    <string name="Partly_Sunny_with_Showers">Partly_Sunny_with_Showers</string>
    <string name="Thunderstorms_AM_and_PM">Thunderstorms_AM_and_PM</string>
    <string name="Mostly_Cloudy_with_Thunder_Showers">Mostly_Cloudy_with_Thunder_Showers</string>
    <string name="Partly_Sunny_with_Thunder_Showers">Partly_Sunny_with_Thunder_Showers</string>
    <string name="Rain_AM_and_PM">Rain_AM_and_PM</string>
    <string name="Flurries_AM_and_PM">Flurries_AM_and_PM</string>
    <string name="Mostly_Cloudy_with_Flurries">Mostly_Cloudy_with_Flurries</string>
    <string name="Partly_Sunny_with_Flurries">Partly_Sunny_with_Flurries</string>
    <string name="Snow_AM_and_PM">Snow_AM_and_PM</string>
    <string name="Mostly_Cloudy_with_Snow">Mostly_Cloudy_with_Snow</string>
    <string name="Ice_AM_and_PM">Ice_AM_and_PM</string>
    <string name="Sleet_AM_and_PM">Sleet_AM_and_PM</string>
    <string name="Freezing_Rain_AM_and_PM">Freezing_Rain_AM_and_PM</string>
    <string name="Rain_and_Snow_Mixed">Rain_and_Snow_Mixed</string>
    <string name="Windy_AM_and_PM">Windy_AM_and_PM</string>
    <string name="Clear">Clear</string>
    <string name="Mostly_Clear">Mostly_Clear</string>
    <string name="Partly_Cloudy">Partly_Cloudy</string>
    <string name="Hazy">Hazy</string>
    <string name="Partly_Cloudy_with_Showers">Partly_Cloudy_with_Showers</string>
    <string name="Partly_Cloudy_with_Thunder_Showers">Partly_Cloudy_with_Thunder_Showers</string>
    <string name="color_dialog_title">Color Selection</string>
    <string name="color_h">hue</string>
    <string name="color_s">saturation</string>
    <string name="color_v">value</string>
    <string name="color_a">alpha</string>
    <string name="howto_title">How to Use This Wallpaper</string>
    <string name="howto_text1">"Live Wallpapers are used via your Customize 
        Wallpaper screen! The Settings screen is there too, 
        if you have the Donation version. Getting there is easy, 
        here's how:"</string>
    <string name="howto_text1_paid">"Live Wallpapers are used via your 
        Customize Wallpaper screen! The Settings screen is there too! 
        Getting there is easy, here's how:"</string>
    <string name="howto_text2">- Return to your Home screen</string>
    <string name="howto_text3">- Press your Menu button</string>
    <string name="howto_text4">- Select Wallpaper from the popup</string>
    <string name="howto_text5">- Look for the Live Wallpapers category</string>
    <string name="howto_getdonation">Get the full version!</string>
    <string name="howto_takeme">Take me there!</string>
    <string name="howto_close">Close</string>
    <string name="howto_nosupport">"Unfortunately our checks indicate this 
        handset doesn't support the Live Wallpaper feature. We recommend 
        uninstalling this app via the Marketplace. Our apologies for the 
        disappointment."</string>
    <string name="howto_nosupport_title">Unsupported Handset</string>
    <string name="upsell_title">Get the Full Version!</string>
    <string name="upsell_getfull">Get the full version</string>
    <string name="upsell_visitwebpage">Visit our web page</string>
    <string name="upsell_close">Close</string>
    <string name="app_name">Weather</string>
    <string name="description">Shows the current weather from Accuweather.</string>
    <string name="title_appearancePreferences">Appearance</string>
    <string name="title_colorPreferences">Color</string>
    <string name="title_speedPreferences">Speed</string>
    <string name="title_otherPreferences">Other</string>
    <string name="title_balloonPreferences">Balloons</string>
    <string name="title_ufoPreferences">UFOs</string>
    <string name="title_todPreferences">Time of Day</string>
    <string name="pref_usesun">Enable Sun</string>
    <string name="pref_usemoon">Enable Moon</string>
    <string name="pref_usetimeofday">Use Time of Day</string>
    <string name="pref_usetimeofday_desc">Adjust light color based on time of day</string>
    <string name="title_timeofdaysettings">Time of Day Settings</string>
    <string name="pref_superfastday">Fast Day</string>
    <string name="pref_superfastday_desc">Make the day go by very quickly</string>
    <string name="pref_lightcolor1">Light Color - Midnight</string>
    <string name="pref_lightcolor1_desc">What color should nighttime be?</string>
    <string name="pref_lightcolor2">Light Color - Sunrise</string>
    <string name="pref_lightcolor2_desc">What color should morning be?</string>
    <string name="pref_lightcolor3">Light Color - Noon</string>
    <string name="pref_lightcolor3_desc">What color should midday be?</string>
    <string name="pref_lightcolor4">Light Color - Sunset</string>
    <string name="pref_lightcolor4_desc">What color should sunset be?</string>
    <string name="pref_defaultcolors">Reset to default colors</string>
    <string name="pref_background">Background Image</string>
    <string name="pref_background_desc">Which backdrop do you prefer?</string>
    <string name="pref_useballoons">Enable Balloons</string>
    <string name="pref_useballoons_desc">Have colorful balloons float through the sky?</string>
    <string name="pref_smsballoons">Text Message Balloons</string>
    <string name="pref_smsballoons_desc">Make the number of balloons represent unread text messages?</string>
    <string name="pref_redballoonsonly">Red Balloons Only</string>
    <string name="pref_redballoonsonly_desc">This pref had to be here, really.</string>
    <string name="pref_useufo">Enable UFOs</string>
    <string name="pref_useufo_desc">If you want the occasional saucer sighting.</string>
    <string name="pref_ufobattery">Low Battery Indicator</string>
    <string name="pref_ufobattery_desc">"UFO sightings only appear if your battery's low?"</string>
    <string name="pref_numclouds">Cloud Count</string>
    <string name="pref_numclouds_desc">How many clouds should be in the scene?</string>
    <string name="pref_numwisps">Wispy Clouds Count</string>
    <string name="pref_numwisps_desc">How many high-altitude clouds should be in the scene?</string>
    <string name="pref_windspeed">Wind Speed</string>
    <string name="pref_windspeed_desc">How fast should the clouds move?</string>
    <string name="pref_usemipmaps">Use Mipmaps?</string>
    <string name="pref_usemipmaps_desc">Faster, but may not work on all handsets. Disable if you get flat colors.</string>
    <string name="pref_cameraspeed">Camera Speed</string>
    <string name="pref_cameraspeed_desc">How fast should the camera move between home screens?</string>
    <string name="pref_ballooncounttarget">Average Balloon Count</string>
    <string name="pref_ballooncounttarget_desc">How many balloons do you want?</string>
</resources>
